# plex_wg_stack

./: .env.sample  .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: master.yml  on_release_master.yml
config/wireguard/templates/: peer.conf  server.conf
deploy/client/: docker-compose.yml
deploy/gluetun/: compose.yml  ssdv2-gluetun-compose.yml
deploy/server/: docker-compose.yml
docs/: gluetun_plex_install.md  index.md
docs/gluetun/: gluetun_plex_install_ssdv2.md
docs/wg-stack/: client_install.md  install_server_vps.md
gluetun/gluetun_plex_install_ssdv2/: index.html
scripts/custom-cont-init.d/: 01-change_ip_route.sh
scripts/wgclient/: PostUp.sh  PreDown.sh  forward.json
scripts/wgserver/: ForwardDown.sh  ForwardUp.sh  PostUp.sh  PreDown.sh
search/: search_index.json
wg-stack/install_server_vps/: index.html
